2008-02-02  Hans-Peter Nilsson  <hp@axis.com>

	* configure.ac: Enable fortran for cris-*-elf and crisv32-*-elf.
	* configure: Regenerate.

2008-01-31  Marc Gauthier  <marc@tensilica.com>

	* configure.ac (xtensa*-*-*): Recognize processor variants.
	* configure: Regenerate.

2008-01-30  Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>

        PR bootstrap/34922
        * configure.ac (PARSE_ARGS): Push suitable setting of
        ac_subdirs_all, for `./configure --help=recursive'.
        Handle `+' in generic toplevel directory disabling.
        * configure: Regenerate.

2008-01-23  Ben Elliston  <bje@au.ibm.com>

	* config.sub, config.guess: Update from upstream sources.

2008-01-08  Ben Elliston  <bje@au.ibm.com>

	* config.sub, config.guess: Update from upstream sources.

2007-12-19  Jeff Johnston  <jjohnstn@redhat.com>

	* COPYING.LIBGLOSS: Update default copyright.

2007-12-19  Jeff Johnston  <jjohnstn@redhat.com>

	* COPYING.NEWLIB: Update default copyright.

2007-12-17  Kaveh R. Ghazi  <ghazi@caip.rutgers.edu>

	* configure.ac: Change required MPFR from 2.2.0 -> 2.2.1.
	Change recommended MPFR from 2.2.1 > 2.3.0.
	* configure: Regenerate.

2007-12-13  Richard Sandiford  <rsandifo@nildram.co.uk>

	* Makefile.tpl (CFLAGS_FOR_TARGET): Add -g.
	(CXXFLAGS_FOR_TARGET): Add -O2 -g.
	* Makefile.in: Regenerate.

2007-12-10  Andreas Tobler  <a.tobler@schweiz.org>

	* configure.ac: Enable libjava for x86_64-*-darwin9.
	* configure: Regenerate.

2007-12-05  Ben Elliston  <bje@au.ibm.com>

	* config.sub, config.guess: Update from upstream sources.

2007-11-28  Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>

        * config-ml.in: Robustify against white space in absolute file
        names.

        * config-ml.in (multi-clean): Substitute ${Makefile}.
        Remove superfluous ${Makefile} in list.

2007-10-23  Daniel Jacobowitz  <dan@codesourcery.com>

	* Makefile.def (dependencies): Make configure-gdb depend on
	all-intl.
	* Makefile.in: Regenerated.
